--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <title>SaltAPI</title>
 
+    <!-- icon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
