--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SaltAPI</title>
 
     <!-- icon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -133,11 +133,13 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Rapidité, flexibilité,<br>modularité</h2>
+                    <p class="lead">Il s'agit des principaux atouts de la SaltAPI. Pensée de manière à être performante,
+                    elle permet aussi l'incorporation de divers modules dédiés, permettant une flexibilité et une
+                    personnalitation des services sans limite.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/pexels-photo.jpg" alt="">
                 </div>
             </div>
 
