added code, discover slides

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">About</a>
+                        <a href="discover.html">Découvrir l'API</a>
                     </li>
                     <li>
                         <a href="module.html">Implémenter un module</a>
@@ -218,7 +218,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">About</a>
+                            <a href="discover.html">Découvrir l'API</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
