Fixed multiple scroll click and navbar

--- a/module.html
+++ b/module.html
@@ -79,6 +79,7 @@
                 <h1>Implémenter un module</h1>
                 <p>Nous allons voir commenter implémenter facilement un module dans cette section.</p>
                 <nav class="subnav">
+                    <div class="container">
                     <ul class="nav nav-pills">
                         <li role="presentation" class="active"><a href="#introduction" data-scroll="introduction">Introduction</a>
                         </li>
@@ -92,6 +93,7 @@
                         <li role="presentation"><a href="discover.html" data-scroll="example">Exemple
                             d'implémentation</a></li>
                     </ul>
+                    </div>
                 </nav>
             </div>
         </div>
