--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
     <!-- /.content-section-a -->
 
-	<a  id="contact"></a>
+	<!--<a  id="contact"></a>-->
     <div class="banner">
 
         <div class="container">
