--- a/module.html
+++ b/module.html
@@ -366,7 +366,7 @@ namespace Module {
                     <p>Étant sur Windows, il ne faut pas oublier deux choses: nous allons créer des librairies
                     dynamiques, ce qui implique d'ajouter un <code class="prettyprint">extern "C"</code> afin de
                     correctement récupérer les symboles, et ajouter <code class="prettyprint">EXPORT</code> en incluant
-                    le fichier <code class="prettyprint">"DllExport.h"</code>.</p>
+                    le fichier <code class="prettyprint">"DllExport.hpp"</code>.</p>
                     <pre class="prettyprint">
 #include "Module/IHTTPHandle.hpp"
 #include "Module/AModule.hpp"
