--- a/discover.html
+++ b/discover.html
@@ -75,8 +75,23 @@
     <div class="container">
         <div class="row">
             <h1>Découvrez la SaltAPI !</h1>
+            <!--<div class="col-md-12">-->
+                <!--<iframe src="//slides.com/jean-kevin/apizia2019epitech/embed" width="100%" height="900"
+                scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
+            <!--</div>-->
             <div class="col-md-12">
-                <iframe src="//slides.com/jean-kevin/apizia2019epitech/embed" width="100%" height="900" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                Nous avons pris soin de documenter au mieux notre code, afin de rendre la SaltAPI accessible à tous.
+                Commençons tout d'abord par les diagrammes de classe !
+                <div class="col-md-6 image-presentation">
+                    <a href="#" class="pop">
+                        <img src="img/APIClassDiagram.png" style="width: 400px; height: 264px;">
+                    </a>
+                </div>
+                <div class="col-md-6 image-presentation">
+                    <a href="#" class="pop">
+                        <img src="img/HTTPClassDiagram.png" style="width: 400px; height: 264px;">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -121,6 +136,36 @@
         </div>
     </div>
 </footer>
+
+
+<!-- Modal Images -->
+<div class="container-fluid">
+    <div class="row">
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                            class="sr-only">Close</span></button>
+                    <img src="" class="imagepreview" style="width: 100%">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Script -->
+<script src="js/myscript.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- google code prettify -->
+<!--<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>-->
 
 </body>
 </html>
