--- a/discover.html
+++ b/discover.html
@@ -74,7 +74,9 @@
 <section id="discover" class="padding-top-50">
     <div class="container">
         <div class="row">
-            <h1>Découvrez la SaltAPI !</h1>
+            <div class="col-md-12">
+                <h1>Découvrez la SaltAPI !</h1>
+            </div>
             <!--<div class="col-md-12">-->
                 <!--<iframe src="//slides.com/jean-kevin/apizia2019epitech/embed" width="100%" height="900"
                 scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
