--- a/discover.html
+++ b/discover.html
@@ -83,18 +83,26 @@
             <!--</div>-->
             <div class="col-md-12">
                 Nous avons pris soin de documenter au mieux notre code, afin de rendre la SaltAPI accessible à tous.
-                Commençons tout d'abord par les diagrammes de classe !
-                <div class="col-md-6 image-presentation">
-                    <a href="#" class="pop">
-                        <img src="img/APIClassDiagram.png" style="width: 400px; height: 264px;">
-                    </a>
-                </div>
-                <div class="col-md-6 image-presentation">
-                    <a href="#" class="pop">
-                        <img src="img/HTTPClassDiagram.png" style="width: 400px; height: 264px;">
-                    </a>
-                </div>
+                Vous trouverez ici toutes les informations nécessaires pour comprendre le fonctionnement de notre HTTPd.
             </div>
+
+        </div>
+        <div class="wrapper">
+            <section class="row">
+                <div class="col-md-12">
+                    <h2>L'architecture</h2>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#" class="pop">
+                            <img src="img/APIClassDiagram.png" style="width: 100%;">
+                        </a>
+                    </div>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#" class="pop">
+                            <img src="img/HTTPClassDiagram.png" style="width: 100%;">
+                        </a>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </section>
