--- a/module.html
+++ b/module.html
@@ -317,7 +317,7 @@ namespace Module {
 namespace Module {
     class ICore;
 
-    class IHTTPHandle {
+    class IModule {
     public:
         enum Type {
             Core,
@@ -325,7 +325,7 @@ namespace Module {
             ConfigLoader,
             Network,
             FileServe,
-            ModuleHandler
+            HTTPHandle
         };
 
     public:
