--- a/salty-studio.html
+++ b/salty-studio.html
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-md-9">
                     <h3>Bastien Dhiver</h3>
-                    <h4>L'homme qui parlait à la fayence</h4>
+                    <h4>Monsieur Libre et Open Source</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
             </div>
